@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
  <description>EEA Geotags profile</description>
- <version>4.7</version>
+ <version>5.3</version>
  <dependencies>
   <dependency>profile-eea.alchemy:default</dependency>
   <dependency>profile-Products.ATVocabularyManager:default</dependency>
